--- a/fast-generator/src/main/resources/templates/entity.java.vm
+++ b/fast-generator/src/main/resources/templates/entity.java.vm
@@ -8,7 +8,7 @@ import com.baomidou.mybatisplus.annotation.TableField;
 import java.io.Serializable;
 import java.util.Date;
 
-import cn.fast.web.base.BaseEntity;
+import cn.fastboot.base.BaseEntity;
 #if(${entityLombokModel})
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
