--- a/fast-generator/src/main/resources/templates/controller.java.vm
+++ b/fast-generator/src/main/resources/templates/controller.java.vm
@@ -1,7 +1,7 @@
 package ${package.Controller};
 import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
-import cn.fast.web.common.result.Result;
+import cn.fastboot.base.result.Result;
 import io.swagger.annotations.Api;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.RequestMapping;
