--- a/fast-generator/src/main/resources/templates/serviceImpl.java.vm
+++ b/fast-generator/src/main/resources/templates/serviceImpl.java.vm
@@ -1,6 +1,6 @@
 package ${package.ServiceImpl};
 import javax.annotation.Resource;
-import cn.fast.web.base.BaseServiceImpl;
+import cn.fastboot.base.BaseServiceImpl;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
